@@ -1,3 +1,14 @@
+2014-07-10  Joseph Pecoraro  <pecoraro@apple.com>
+
+        [Mac] NSWindow warning: adding an unknown subview opening detached Inspector
+        https://bugs.webkit.org/show_bug.cgi?id=134813
+
+        Reviewed by Timothy Hatcher.
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        (-[WebInspectorWindowController window]):
+        Use a selector that will avoid the warning message.
+
 2014-07-09  Ryosuke Niwa  <rniwa@webkit.org>
 
         REGRESSION(r167770): Cannot login in Evernote Safari extension
